# astro_anomaly_detection

./: .env.example  .gitignore  DEPLOYMENT.md  HF_README.md  README.md  README_ANOMALY.md  api_server.py  app.py  astro.config.mjs  demo.py  deploy_to_hf.sh  main.py  package.json  pyproject.toml  vit.py
.github/workflows/: deploy.yml
src/: config.ts
src/components/: AnomalyDetector.astro
src/pages/: index.astro
